2009-06-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/bin/Makefile.am (cce.1 slc.1 slr.1 slt.1): Revert previous
	change since the temporary files are different anyways. Give
	absolute pathname to help2man.

2009-06-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/bin/Makefile.am (cce.1 slc.1 slr.1 slt.1): Use different
	temporary file names to avoid race condition with script build
	rule.

2009-06-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* programs/benchmarks/nas/Makefile.am
	* programs/benchmarks/nas/is/Makefile.am
	* programs/benchmarks/blas/Makefile.am
	* programs/benchmarks/quicksort/Makefile.am
	* tools/lib/mtalpha.mk
	* tools/lib/seqc.mk
	* tools/lib/ptl.mk
	* tools/lib/Makefile.am
	* tools/Makefile.am: Add files missing from previous commit.

2009-06-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Change source tree layout.

	* sl.mk,
	* tests.mk,
	* Makefile.am,
	* bootstrap,
	* configure.ac: Update accordingly.

	* bin/Makefile.am,
	* bin/cce.in,
	* bin/sag,
	* bin/scu,
	* bin/slc.in,
	* bin/slr.in,
	* bin/slt.in,
	* bin/spp,
	* bin/timeout.in: Rename to...

	* tools/bin/Makefile.am,
	* tools/bin/cce.in,
	* tools/bin/sag,
	* tools/bin/scu,
	* tools/bin/slc.in,
	* tools/bin/slr.in,
	* tools/bin/slt.in,
	* tools/bin/spp,
	* tools/bin/timeout.in: here.

	* demo/10threads.sl,
	* demo/Makefile.am,
	* demo/answer.sl,
	* demo/fibonacci.sl,
	* demo/helloworld.sl,
	* demo/roman.sl: Rename to...

	* programs/demo/10threads.sl,
	* programs/demo/Makefile.am,
	* programs/demo/answer.sl,
	* programs/demo/fibonacci.sl,
	* programs/demo/helloworld.sl,
	* programs/demo/roman.sl: here.
	
	* demo/blas-test-saxpy.sl,
	* demo/blas/caxpy.sl,
	* demo/blas/cdotc.sl,
	* demo/blas/cdotu.sl,
	* demo/blas/complex.slh,
	* demo/blas/daxpy.sl,
	* demo/blas/ddot.sl,
	* demo/blas/saxpy.sl,
	* demo/blas/sdot.sl,
	* demo/blas/templates/xaxpy.sl,
	* demo/blas/templates/xaxpyc.sl,
	* demo/blas/templates/xdot.sl,
	* demo/blas/templates/xdotc.sl,
	* demo/blas/zaxpy.sl,