@@ -1,3 +1,12 @@
+2009-06-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	* tools/lib/t-pppalpha/include/sl_support.h: Update PLACE_LOCAL
+	with definition from [svp27].
+
+	* tools/lib/t-utc0/slimpl.m4: Replace definition of `sl_decl' to
+	avoid emitting a dangling brace after the declaration, as would
+	happen when reusing `sl_def' blindly.
+
 2009-06-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	* tools/bin/Makefile.am (cce.1 slc.1 slr.1 slt.1): Revert previous
